syntax = "proto3";
option go_package = "internal/rpc/pb";

package protobuf;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

message Container {
  string id = 1;
  string name = 2;
  string image = 3;
  string status = 4;
  string state = 5;
  string ImageId = 6;
  google.protobuf.Timestamp created = 7;
  google.protobuf.Timestamp started = 8;
  string health = 9;
  string host = 10;
  bool tty = 11;
  map<string, string> labels = 12;
  repeated ContainerStat stats = 13;
  string group = 14;
}

message ContainerStat {
  string id = 1;
  float cpuPercent = 2;
  float memoryUsage = 3;
  float memoryPercent = 4;
}

message LogEvent {
  uint32 id = 1;
  string containerId = 2;
  google.protobuf.Any message = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SimpleMessage { string message = 1; }

message ComplexMessage { google.protobuf.Struct message = 1; }

message ContainerEvent {
  string id = 1;
  string actorId = 2;
  string name = 3;
  string host = 4;
}
